[package]
name = "rustpython"
version = "0.1.2"
authors = ["RustPython Team"]
edition = "2018"
description = "A python interpreter written in rust."
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
[lib]
name = "teerustpython"
crate-type = ["staticlib"]
[workspace]
members = [".", "derive", "vm", "wasm/lib", "parser", "compiler", "bytecode", "examples/freeze"]

# [[bench]]
# name = "bench"
# path = "./benchmarks/bench.rs"

[features]
#flame-it = ["rustpython-vm/flame-it", "flame", "flamescope"]
freeze-stdlib = ["rustpython-vm/freeze-stdlib"]

ssl = ["rustpython-vm/ssl"]

[dependencies]
sgx_tstd = { path = "/root/sgx/sgx_tstd"}

sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git",rev="v1.1.3" }
log              = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger       = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
#clap = "2.33"
rustpython-compiler = {path = "compiler", version = "0.1.1"}
rustpython-parser = {path = "parser", version = "0.1.1"}
rustpython-vm = {path = "vm", version = "0.1.1"}
# dirs-next = { path="/root/sgx/teerustpython/already/dirsnext-v1.0.1" }
num-traits       = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
cfg-if = "0.1.9"

flame = { version = "0.2", optional = true }
flamescope = { version = "0.1", optional = true }

# [target.'cfg(not(target_os = "wasi"))'.dependencies]
# rustyline = "6.0"





[dev-dependencies.cpython]
version = "0.2"

# [[bin]]
# name = "rustpython"
# path = "src/lib.rs"

[patch.crates-io]
# REDOX START, Uncommment when you want to compile/check with redoxer
# # following patches are just waiting on a new version to be released to crates.io
# nix = { git = "https://github.com/nix-rust/nix" }
# crossbeam-utils = { git = "https://github.com/crossbeam-rs/crossbeam" }
# socket2 = { git = "https://github.com/alexcrichton/socket2-rs" }
# REDOX END
