[package]

name = "void"
version = "1.0.2"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-void.git"
description = "The uninhabited void type for use in statically impossible cases."
readme = "README.md"
license = "MIT"

[dependencies]
sgx_tstd                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
[features]

default = []

