[package]
name = "ascii-canvas"
version = "2.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
description = "simple canvas for drawing lines and styled text and emitting to the terminal"
repository = "https://github.com/nikomatsakis/ascii-canvas"
license = "Apache-2.0/MIT"

[dependencies]
term = {path = "/root/sgx/teerustpython/already/term-0.5.0"}
sgx_tstd                     = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

