[package]
name = "lz4-compress"
version = "0.1.1"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Pure Rust implementation of raw LZ4 compression/decompression."
repository = "https://github.com/ticki/tfs"
documentation = "https://docs.rs/lz4-compress"
license = "MIT"
keywords = ["compression", "lz4", "compress", "decompression", "decompress"]
exclude = ["target", "Cargo.lock"]

[dependencies]
byteorder = {path="/root/sgx/samplecode/teerustpython/crate/byteorder-sgx"}
quick-error = {path="/root/sgx/samplecode/teerustpython/crate/quick-error-sgx"}
sgx_tstd = {path="/root/sgx/sgx_tstd"}
