[package]
name = "maplit"
version = "1.0.2"
authors = ["bluss"]

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/maplit"
documentation = "https://docs.rs/maplit/"

description = "Collection “literal” macros for HashMap, HashSet, BTreeMap, and BTreeSet."

keywords = ["literal", "data-structure", "hashmap", "macro"]
categories = ["rust-patterns"]

[dependencies]
sgx_tstd                     = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }



[package.metadata.release]
no-dev-version = true
