[package]
name = "mt19937"
version = "2.0.1"
authors = ["Noah <33094578+coolreader18@users.noreply.github.com>", "RustPython Team"]
edition = "2018"
license-file = "LICENSE"
description = "A translation of the MT19937 Mersenne Twister rng algorithm to Rust"
documentation = "https://docs.rs/mt19937"
repository = "https://github.com/RustPython/mt19937"

[dependencies]
rand_core             = { path = "/root/sgx/teerustpython/crate/rand-sgx" }
sgx_tstd = { path = "/root/sgx/sgx_tstd"}


