[package]
authors = ["The Rust Project Developers"]
description = "Complex numbers implementation for Rust"
documentation = "https://docs.rs/num-complex"
homepage = "https://github.com/rust-num/num-complex"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT/Apache-2.0"
name = "num-complex"
repository = "https://github.com/rust-num/num-complex"
version = "0.2.4"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]

[package.metadata.docs.rs]
features = ["std", "serde", "rand"]

[dependencies]
sgx_tstd = { path = "/root/sgx/sgx_tstd"}



[dependencies.num-traits]
path = "/root/sgx/samplecode/teerustpython/crate/num-traits-sgx"
default-features = false

[dependencies.serde]
optional = true
path = "/root/sgx/samplecode/teerustpython/crate/serde-sgx/serde"
default-features = false

[dependencies.rand]
optional = true
path = "/root/sgx/samplecode/teerustpython/crate/rand-sgx"
default-features = false

[features]
default = ["std"]
i128 = ["num-traits/i128"]
std = ["num-traits/std"]

[build-dependencies]
autocfg = "1"
