[package]
authors = ["The Rust Project Developers"]
description = "Integer traits and functions"
documentation = "https://docs.rs/num-integer"
homepage = "https://github.com/rust-num/num-integer"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num-integer"
name = "num-integer"
version = "0.1.42"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies.num-traits]
git = "https://github.com/mesalock-linux/num-traits-sgx"
# default-features = false

[dependencies]
sgx_tstd                       = {  path  = "/root/sgx/sgx_tstd" }



[features]
default = ["std"]
i128 = ["num-traits/i128"]
std = ["num-traits/std"]

[build-dependencies]
autocfg = "1"


