[package]
authors = ["The Rust Project Developers"]
description = "External iterators for generic mathematics"
documentation = "https://docs.rs/num-iter"
homepage = "https://github.com/rust-num/num-iter"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num-iter"
name = "num-iter"
version = "0.1.40"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
sgx_tstd                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

[dependencies.num-integer]
git = "https://github.com/mesalock-linux/num-integer-sgx"
default-features = false

[dependencies.num-traits]
git = "https://github.com/mesalock-linux/num-traits-sgx" 
default-features = false

[features]
default = ["std"]
i128 = ["num-integer/i128", "num-traits/i128"]
std = ["num-integer/std", "num-traits/std"]

[build-dependencies]
autocfg = "1"
