[package]
authors = ["The Rust Project Developers"]
description = "Rational numbers implementation for Rust"
documentation = "https://docs.rs/num-rational"
homepage = "https://github.com/rust-num/num-rational"
keywords = ["mathematics", "numerics", "fractions"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT/Apache-2.0"
name = "num-rational"
repository = "https://github.com/rust-num/num-rational"
version = "0.2.4"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]

[package.metadata.docs.rs]
features = ["std", "bigint-std", "serde"]

[dependencies]
sgx_tstd                     = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }


[dependencies.num-bigint]
optional = true
git = "https://github.com/mesalock-linux/num-bigint-sgx"
# default-features = false

[dependencies.num-integer]
git = "https://github.com/mesalock-linux/num-integer-sgx"
default-features = false

[dependencies.num-traits]
git = "https://github.com/mesalock-linux/num-traits-sgx"
default-features = false

[dependencies.serde]
optional = true
git = "https://github.com/mesalock-linux/serde-sgx" 
default-features = false

[features]
default = [ "bigint-std","std"]
# default = ["bigint-std", "std"]

i128 = ["num-integer/i128", "num-traits/i128"]
std = ["num-integer/std", "num-traits/std"]
bigint = ["num-bigint"]
bigint-std = ["bigint", "num-bigint/std"]

[build-dependencies]
autocfg = "1"
