[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
name = "pwd"
version = "1.3.1"
documentation = "https://docs.rs/pwd"
homepage = "https://gitlab.com/pwoolcoc/pwd.git"
repository = "https://gitlab.com/pwoolcoc/pwd.git"
license = "CC-PDDC"
readme = "README.adoc"
keywords = ["unix", "passwd", "pwd", "ffi", "linux"]
categories = ["external-ffi-bindings", "filesystem"]
description = """
Safe interface to pwd.h
"""

[dependencies]
libc = "0.2"
failure = "0.1.1"
