[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
name = "pwd"
version = "1.3.1"
documentation = "https://docs.rs/pwd"
homepage = "https://gitlab.com/pwoolcoc/pwd.git"
repository = "https://gitlab.com/pwoolcoc/pwd.git"
license = "CC-PDDC"
readme = "README.adoc"
keywords = ["unix", "passwd", "pwd", "ffi", "linux"]
categories = ["external-ffi-bindings", "filesystem"]
description = """
Safe interface to pwd.h
"""

[dependencies]
sgx_libc                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tstd                     = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }


failure = {path="/root/sgx/teerustpython/already/failure-master"}
