[package]

name = "statrs"
version = "0.12.0"
authors = ["Michael Ma"]
description = "Statistical computing library for Rust"
license = "MIT"
keywords = ["probability", "statistics", "stats", "distribution", "math"]
categories = ["science"]
documentation = "https://docs.rs/statrs/0.12.0/statrs/"
homepage = "https://github.com/boxtown/statrs"
repository = "https://github.com/boxtown/statrs"
edition = "2018"

[lib]

name = "statrs"
path = "src/lib.rs"

[dependencies]
sgx_rand                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tstd                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

