[package]

name = "void"
version = "1.0.2"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-void.git"
description = "The uninhabited void type for use in statically impossible cases."
readme = "README.md"
license = "MIT"

[dependencies]
sgx_tstd                       = {  path  = "/root/sgx/sgx_tstd" }

[features]

default = []

