[package]
name = "adler32"
version = "1.0.4"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Minimal Adler32 implementation for Rust."
documentation = "https://docs.rs/adler32/"
repository = "https://github.com/remram44/adler32-rs"
readme = "README.md"
keywords = ["adler32", "hash", "rolling"]
license = "Zlib"

exclude = ["/sgx/*"]

[dev-dependencies]
#rand = "0.4"

[dependencies]
sgx_tstd = { path = "/root/sgx/sgx_tstd", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
