[package]
name = "env_logger"
edition = "2018"
version = "0.7.1" # remember to update html_root_url
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebasmagri/env_logger/"
documentation = "https://docs.rs/env_logger"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger"]
exclude = ["/sgx/*"]

[workspace]
members = [
    "ci"
]

[dependencies]
log = { version = "0.4", features = ["std"], path = "/root/sgx/samplecode/teerustpython/crate/log-sgx" }
regex = { version = "1.0.3", optional = true, path = "/root/sgx/samplecode/teerustpython/crate/regex-sgx" }
termcolor = { version = "1.0.5", optional = true, path = "/root/sgx/samplecode/teerustpython/crate/termcolor-sgx" }
humantime = { version = "1.3", optional = true, path = "/root/sgx/samplecode/teerustpython/crate/humantime-sgx" }
#atty = { version = "0.2.5", optional = true }
sgx_tstd = { path = "/root/sgx/sgx_tstd", optional = true }

[[test]]
name = "regexp_filter"
harness = false

[[test]]
name = "log-in-log"
harness = false

[[test]]
name = "log_tls_dtors"
harness = false

[[test]]
name = "init-twice-retains-filter"
harness = false

[features]
default = ["termcolor", "humantime", "regex", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
