[package]
name = "humantime"
description = """
    A parser and formatter for std::time::{Duration, SystemTime}
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["time", "human", "human-friendly", "parser", "duration"]
homepage = "https://github.com/tailhook/humantime"
documentation = "https://docs.rs/humantime"
version = "1.3.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
categories = ["date-and-time"]
exclude = ["/sgx/*"]

[dependencies]
quick-error = { path = "/root/sgx/teerustpython/crate/quick-error-sgx" }
sgx_tstd = { path = "/root/sgx/sgx_tstd", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[lib]
name = "humantime"
path = "src/lib.rs"

[dev-dependencies]
time = "0.1.39"
chrono = "0.4.0"
rand = "0.4.2"
