[package]
name = "quickcheck"
version = "0.8.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automatic property based testing with shrinking."
documentation = "http://burntsushi.net/rustdoc/quickcheck/"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
categories = ["development-tools::testing"]
license = "Unlicense/MIT"
exclude = ["/.travis.yml", "/Makefile", "/ctags.rust", "/session.vim", "/sgx/*"]

[workspace]
#members = ["quickcheck_macros"]

[features]
default = ["regex", "use_logging", "mesalock_sgx"]
unstable = []
use_logging = ["log", "env_logger"]
regex = ["env_logger/regex"]
mesalock_sgx = ["sgx_tstd"]

[lib]
name = "quickcheck"

[dependencies]
env_logger = { path = "/root/sgx/teerustpython/crate/env_logger-sgx", optional = true }
log = { path = "/root/sgx/teerustpython/crate/log-sgx" }
rand = { path = "/root/sgx/teerustpython/crate/rand-sgx" }
rand_core = { path = "/root/sgx/teerustpython/crate/rand-sgx/rand_core" }
sgx_tstd = { path = "/root/sgx/sgx_tstd", optional = true }
