[package]
name = "rustpython-bytecode"
description = "RustPython specific bytecode."
version = "0.1.2"
authors = ["RustPython Team"]
edition = "2018"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"


[dependencies]
sgx_tstd = { path = "/root/sgx/sgx_tstd"}

bincode          = { path = "/root/sgx/samplecode/teerustpython/crate/bincode-sgx" }
bitflags = {path = "/root/sgx/samplecode/teerustpython/already/bitflags-1.2.1"}
lz4-compress = {path = "/root/sgx/samplecode/teerustpython/already/lz4"}
# lzzzz = {path = "/root/sgx/samplecode/teerustpython/already/lzzzz-master"}
num-bigint = {  path = "/root/sgx/samplecode/teerustpython/crate/num-bigint-sgx", features = ["serde"] }
num-complex = { path = "/root/sgx/samplecode/teerustpython/already/num-complex", features = ["serde"] }
serde = { path = "/root/sgx/samplecode/teerustpython/crate/serde-sgx/serde", features = ["derive"] }
itertools      = { path = "/root/sgx/samplecode/teerustpython/already/itertools-master", default-features=false}
