[package]
name = "rustpython-compiler-std"
version = "0.1.2"
description = "Compiler for python code into bytecode for the rustpython VM."
authors = ["RustPython Team"]
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2018"

[dependencies]
indexmap = "1.0"
itertools = "0.8.0"
rustpython-bytecode-std = { path = "../bytecode-std", version = "0.1.1" }
rustpython-parser-std = { path = "../parser-std", version = "0.1.1" }
num-complex = { version = "0.2", features = ["serde"] }
log = "0.4"
arrayvec = "0.5"
