[package]
name = "rustpython-compiler"
version = "0.1.2"
description = "Compiler for python code into bytecode for the rustpython VM."
authors = ["RustPython Team"]
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2018"

[dependencies]
indexmap = {path = "/root/sgx/teerustpython/already/indexmap"}
itertools = {path = "/root/sgx/teerustpython/already/itertools-master"}
rustpython-bytecode = { path = "../bytecode", version = "0.1.2" }
rustpython-parser = { path = "../parser", version = "0.1.2" }
num-complex = { path = "/root/sgx/teerustpython/already/num-complex", features = ["serde"] }
log              = { git = "https://github.com/mesalock-linux/log-sgx" }
arrayvec = {path = "/root/sgx/teerustpython/already/arrayvec"}
sgx_tstd = { path = "/root/sgx/sgx_tstd"}

