[package]
name = "rustpython-derive"
version = "0.1.2"
description = "Rust language extensions and macros specific to rustpython."
authors = ["RustPython Team"]
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
# quote          = "0.6"
# syn            = "0.15"
proc-macro2 = "1.0"
rustpython-compiler-std = { path = "../compiler-std", version = "0.1.1" }
rustpython-bytecode-std = { path = "../bytecode-std", version = "0.1.1" }
maplit = "1.0.2"
once_cell = "1.3.1"
# maplit = {path = "/root/sgx/teerustpython/already/maplit-1.0.2"}
# once_cell = {path = "/root/sgx/teerustpython/already/once_cell-1.3.1"}
# sgx_tstd                       = {  path  = "/root/sgx/sgx_tstd" }

