[package]
name = "rustpython-parser"
version = "0.1.2"
description = "Parser for python code."
authors = [ "RustPython Team" ]
build = "build.rs"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2018"

[build-dependencies]
lalrpop="0.17"

[dependencies]
sgx_tstd                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
lalrpop-util= {path="/root/sgx/teerustpython/already/lalrpop-0.17.2/lalrpop-util"}
log              = { git = "https://github.com/mesalock-linux/log-sgx" }
num-bigint       = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
num-traits       = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
unic-emoji-char = {path="/root/sgx/teerustpython/already/rust-unic-master/unic/emoji/char"}
unic-ucd-ident  = {path="/root/sgx/teerustpython/already/rust-unic-master/unic/ucd/ident"}
unicode_names2 = {path="/root/sgx/teerustpython/already/unicode_names2-0.4.0"}
